--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_kurs_recznie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_kurs_recznie.xhtml
@@ -23,7 +23,8 @@
         </h:form>
         <h:form id="formkursrecznie">
             <h:outputText value="dodawanie pojedyńczej tabeli ręcznie - kurs własny" style="font-weight: 900; color: green;"/>
-            <p:dataTable id="dataKursReczny" var="wpis" value="#{walutyViewFK.kurswprowadzonyrecznie}" editable="true" style="width: 830px;">
+            <p:dataTable id="dataKursReczny" var="wpis" value="#{walutyViewFK.kurswprowadzonyrecznie}" editable="true" style="width: 830px;"
+                         rowsPerPageTemplate="15,30,250,500" paginatorPosition="top" paginator="true" rows="15">
                 <p:column headerText="nr tabeli" width="100" style="text-align: center; height: 25px;">
                     <p:inputMask id="kodPole" value="#{wpis.nrtabeli}" onblur="weryfikujnumertabeli()" mask="999/a/aaa/9999" slotChar="###/A/NBP/rrrr" size="16"/>
                 </p:column>
