--- a/npkpir_23/web/wspolny/sub/vatzestfk.xhtml
+++ b/npkpir_23/web/wspolny/sub/vatzestfk.xhtml
@@ -223,9 +223,9 @@
                     <h:outputText value="&#x2713;" rendered="#{itemikjpk.amazontax0additional1 eq 1}" style="color: green;font-weight: bold"/>
                 </p:column>
             </p:dataTable>
-             <p:contextMenu for="form:akordeon:tabelapozycjedlajpk" style="width: 200px;">
-                <p:menuitem value="usuń wszystkie" icon="ui-icon-trash" actionListener="#{klientJPKView.usunwszytskieimportowane()}" update="form:akordeon:tabelapozycjedlajpk"/>
-            </p:contextMenu>
+<!--             <p:contextMenu for="formEwidencjeGuestForm:akordeon:tabelapozycjedlajpk" style="width: 200px;">
+                <p:menuitem value="usuń wszystkie" icon="ui-icon-trash" actionListener="#{klientJPKView.usunwszytskieimportowane()}" update="formEwidencjeGuestForm:akordeon:tabelapozycjedlajpk"/>
+            </p:contextMenu>-->
         </p:tab>
     </p:tabView>
 </h:form>
