--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -163,7 +163,7 @@
                                         <p:ajax global="false" event="blur" partialSubmit="true"/>
                                     </p:inputText>
                                 </p:column>
-                                <p:column  rendered="#{dokfkView.zapisz0edytuj1 eq false}">
+                                <p:column >
                                     <p:inputText id="data4DialogWpisywanie" value="#{dokfkView.selected.datawplywu}" 
                                                  onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data4DialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
                                                  title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
@@ -171,7 +171,7 @@
                                         <p:ajax global="false" event="blur" partialSubmit="true"/>
                                     </p:inputText>
                                 </p:column>
-                                <p:column>
+                                <p:column >
                                     <p:inputText id="data2DialogWpisywanie" value="#{dokfkView.selected.datadokumentu}" 
                                                  onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data2DialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
                                                  title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
@@ -180,17 +180,8 @@
                                         <p:ajax global="false" event="blur" partialSubmit="true"/>
                                     </p:inputText>
                                 </p:column>
-<!--                                umożliwia zmiane kursu waluty podczas edycji zaimportowanego -->
-                                <p:column rendered="#{dokfkView.zapisz0edytuj1 eq true}">
-                                    <p:inputText id="data2aDialogWpisywanie" value="#{dokfkView.selected.datadokumentu}" 
-                                                 onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data2aDialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
-                                                 title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
-                                                 onfocus="zaznaczpoledaty(this)" 
-                                                 >
-                                        <p:ajax global="false" event="blur" partialSubmit="true" listener="#{dokfkView.zmienkursNBP()}" />
-                                    </p:inputText>
-                                </p:column>
-                                <p:column>
+
+                                <p:column rendered="#{dokfkView.zapisz0edytuj1 eq false}">
                                     <p:inputText id="data3DialogWpisywanie" value="#{dokfkView.selected.dataoperacji}" 
                                                  onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data3DialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
                                                  title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
@@ -198,6 +189,16 @@
                                                  >
                                         <p:ajax global="false" event="blur" partialSubmit="true"/>
                                         <p:ajax global="false" event="change" partialSubmit="true" listener="#{dokfkView.wygenerujokreswpisudokumentu}" />
+                                    </p:inputText>
+                                </p:column>
+                                <!--                                umożliwia zmiane kursu waluty podczas edycji zaimportowanego -->
+                                <p:column rendered="#{dokfkView.zapisz0edytuj1 eq true}">
+                                    <p:inputText id="data3aDialogWpisywanie" value="#{dokfkView.selected.dataoperacji}" 
+                                                 onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data3aDialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
+                                                 title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
+                                                 onfocus="zaznaczpoledaty(this)" 
+                                                 >
+                                        <p:ajax global="false" event="blur" partialSubmit="true" listener="#{dokfkView.zmienkursNBP()}" />
                                     </p:inputText>
                                 </p:column>
                                 <p:column rendered="#{WpisView.podatnikObiekt.rozrachunkifk}">
