--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -71,9 +71,9 @@
                             <p:pickList id="wybranypracownik" value="#{pasekwynagrodzenView.listakalendarzmiesiac}" var="kalendarzItem" itemLabel="#{kalendarzItem.angaz.pracownik.nazwiskoImie}" itemValue="#{kalendarzItem}" 
                                         showCheckbox="true" converter="#{kalendarzmiesiacConverter}" showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains"/>
                             <p:panelGrid columns="5" >
-                            <p:commandButton styleClass="buttonnorm" actionListener="#{pasekwynagrodzenView.przelicz()}" value="oblicz" update="PasekwynagrodzenListForm" />
+                            <p:commandButton styleClass="buttonnorm" actionListener="#{pasekwynagrodzenView.przelicz()}" value="oblicz" update="PasekwynagrodzenListForm DefinicjalistaplacCreateForm2:wybranypracownik" />
                             <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.mailListaPlac}" value="mail" update="PasekwynagrodzenListForm" />
-                            <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.usun()}" value="usuń" update="PasekwynagrodzenListForm" />
+                            <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.usun()}" value="usuń" update="PasekwynagrodzenListForm DefinicjalistaplacCreateForm2:wybranypracownik" />
                             <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.drukujliste}" value="druk lista"/>
                             <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.zapisz}" value="Save" update="PasekwynagrodzenListForm" />
                             </p:panelGrid>
