--- a/kadry/src/main/webapp/umowa/sub/dane_zmiennewynagrodzenia.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_zmiennewynagrodzenia.xhtml
@@ -106,7 +106,7 @@
                                  <p:selectBooleanCheckbox value="#{itemzmiennawyn.minimalneustatowe}"/>
                             </p:column>
                             <p:column width="30" style="text-align: center;">
-                                <p:commandButton icon="pi pi-edit"  actionListener="#{zmiennaWynagrodzeniaView.wybierzdoedycji(itemzmiennawyn)}" update="north, @(form) akordeon:ZmiennawynagrodzeniaCreateForm"/>
+                                <p:commandButton icon="pi pi-pencil"  actionListener="#{zmiennaWynagrodzeniaView.wybierzdoedycji(itemzmiennawyn)}" update="north, @(form) akordeon:ZmiennawynagrodzeniaCreateForm"/>
                             </p:column>
                             <p:column width="30" style="text-align: center;">
                                 <p:commandButton icon="pi pi-trash" actionListener="#{zmiennaWynagrodzeniaView.usunZmiennaWyn(itemzmiennawyn)}" update="north @(form)">
