--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_zagranica.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_zagranica.xhtml
@@ -66,7 +66,7 @@
                 <p:column headerText="12" style="text-align: center;">
                     <h:outputText value="#{itemodd.o_12.liczbadni}" rendered="#{itemodd.o_12 ne null and itemodd.o_12.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="suma" style="margin-left: 10px;">
+                <p:column headerText="suma" style="margin-left: 10px; text-align: center;">
                     <h:outputText value="#{itemodd.sumadni}" style="color: #{itemodd.sumadni gt 182?'red':'initial'}"/>
                 </p:column>
                 <p:column headerText="przekr." width="50">
@@ -93,46 +93,46 @@
                 <p:column headerText="pracownik" width="150" sortBy="#{itemodd.pracownik.nazwiskoImie}" sortOrder="asc" sortPriority="1">
                     <h:outputText value="#{itemodd.pracownik.nazwiskoImie}"/>
                 </p:column>
-                <p:column headerText="rok" width="50" style="text-align: center;" sortBy="#{itemodd.rok}" sortOrder="asc" sortPriority="2">
+                <p:column headerText="rok" width="50" sortBy="#{itemodd.rok}" sortOrder="asc" sortPriority="2">
                     <h:outputText value="#{itemodd.rok}"/>
                 </p:column>
-                <p:column headerText="01" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_01.podatekzagranica}" rendered="#{itemodd.o_01 ne null and itemodd.o_01.liczbadni gt 0}"/>
+                <p:column headerText="01">
+                    <bcf:outputpl0 value="#{itemodd.o_01.podatekzagranica}" rendered="#{itemodd.o_01 ne null and itemodd.o_01.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="02" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_02.podatekzagranica}" rendered="#{itemodd.o_02 ne null and itemodd.o_02.liczbadni gt 0}"/>
+                <p:column headerText="02">
+                    <bcf:outputpl0 value="#{itemodd.o_02.podatekzagranica}" rendered="#{itemodd.o_02 ne null and itemodd.o_02.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="03" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_03.podatekzagranica}" rendered="#{itemodd.o_03 ne null and itemodd.o_03.liczbadni gt 0}"/>
+                <p:column headerText="03">
+                    <bcf:outputpl0 value="#{itemodd.o_03.podatekzagranica}" rendered="#{itemodd.o_03 ne null and itemodd.o_03.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="04" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_04.podatekzagranica}" rendered="#{itemodd.o_04 ne null and itemodd.o_04.liczbadni gt 0}"/>
+                <p:column headerText="04">
+                    <bcf:outputpl0 value="#{itemodd.o_04.podatekzagranica}" rendered="#{itemodd.o_04 ne null and itemodd.o_04.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="05" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_05.podatekzagranica}" rendered="#{itemodd.o_05 ne null and itemodd.o_05.liczbadni gt 0}"/>
+                <p:column headerText="05">
+                    <bcf:outputpl0 value="#{itemodd.o_05.podatekzagranica}" rendered="#{itemodd.o_05 ne null and itemodd.o_05.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="06" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_06.podatekzagranica}" rendered="#{itemodd.o_06 ne null and itemodd.o_06.liczbadni gt 0}"/>
+                <p:column headerText="06">
+                    <bcf:outputpl0 value="#{itemodd.o_06.podatekzagranica}" rendered="#{itemodd.o_06 ne null and itemodd.o_06.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="07" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_07.podatekzagranica}" rendered="#{itemodd.o_07 ne null and itemodd.o_07.liczbadni gt 0}"/>
+                <p:column headerText="07">
+                    <bcf:outputpl0 value="#{itemodd.o_07.podatekzagranica}" rendered="#{itemodd.o_07 ne null and itemodd.o_07.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="08" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_08.podatekzagranica}" rendered="#{itemodd.o_08 ne null and itemodd.o_08.liczbadni gt 0}"/>
+                <p:column headerText="08">
+                    <bcf:outputpl0 value="#{itemodd.o_08.podatekzagranica}" rendered="#{itemodd.o_08 ne null and itemodd.o_08.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="09" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_09.podatekzagranica}" rendered="#{itemodd.o_09 ne null and itemodd.o_09.liczbadni gt 0}"/>
+                <p:column headerText="09">
+                    <bcf:outputpl0 value="#{itemodd.o_09.podatekzagranica}" rendered="#{itemodd.o_09 ne null and itemodd.o_09.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="10" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_10.podatekzagranica}" rendered="#{itemodd.o_10 ne null and itemodd.o_10.liczbadni gt 0}"/>
+                <p:column headerText="10">
+                    <bcf:outputpl0 value="#{itemodd.o_10.podatekzagranica}" rendered="#{itemodd.o_10 ne null and itemodd.o_10.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="11" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_11.podatekzagranica}" rendered="#{itemodd.o_11 ne null and itemodd.o_11.liczbadni gt 0}"/>
+                <p:column headerText="11">
+                    <bcf:outputpl0 value="#{itemodd.o_11.podatekzagranica}" rendered="#{itemodd.o_11 ne null and itemodd.o_11.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="12" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_12.podatekzagranica}" rendered="#{itemodd.o_12 ne null and itemodd.o_12.liczbadni gt 0}"/>
+                <p:column headerText="12">
+                    <bcf:outputpl0 value="#{itemodd.o_12.podatekzagranica}" rendered="#{itemodd.o_12 ne null and itemodd.o_12.liczbadni gt 0}"/>
                 </p:column>
-                <p:column headerText="suma" style="margin-left: 10px;">
+                <p:column headerText="suma" style="margin-left: 10px; text-align: center;">
                     <h:outputText value="#{itemodd.sumadni}" style="color: #{itemodd.sumadni gt 182?'red':'initial'}"/>
                 </p:column>
                 <p:column headerText="przekr." width="50">
@@ -154,7 +154,7 @@
                                  emptyMessage="nie pobrano danych"
                                  >
                   <f:facet name="header">
-                    <h:outputText value="podatek niemcy"/>
+                    <h:outputText value="podatek polska "/>
                 </f:facet>
                 <p:column headerText="pracownik" width="150" sortBy="#{itemodd.pracownik.nazwiskoImie}" sortOrder="asc" sortPriority="1">
                     <h:outputText value="#{itemodd.pracownik.nazwiskoImie}"/>
@@ -162,43 +162,43 @@
                 <p:column headerText="rok" width="50" style="text-align: center;" sortBy="#{itemodd.rok}" sortOrder="asc" sortPriority="2">
                     <h:outputText value="#{itemodd.rok}"/>
                 </p:column>
-                <p:column headerText="01" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_01.podatekzagranica}" rendered="#{itemodd.o_01 ne null and itemodd.o_01.liczbadni gt 0}"/>
+                <p:column headerText="01">
+                    <bcf:outputpl0 value="#{itemodd.o_01.podatekpolska}" />
                 </p:column>
-                <p:column headerText="02" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_02.podatekzagranica}" rendered="#{itemodd.o_02 ne null and itemodd.o_02.liczbadni gt 0}"/>
+                <p:column headerText="02">
+                    <bcf:outputpl0 value="#{itemodd.o_02.podatekpolska}" />
                 </p:column>
-                <p:column headerText="03" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_03.podatekzagranica}" rendered="#{itemodd.o_03 ne null and itemodd.o_03.liczbadni gt 0}"/>
+                <p:column headerText="03">
+                    <bcf:outputpl0 value="#{itemodd.o_03.podatekpolska}" />
                 </p:column>
-                <p:column headerText="04" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_04.podatekzagranica}" rendered="#{itemodd.o_04 ne null and itemodd.o_04.liczbadni gt 0}"/>
+                <p:column headerText="04">
+                    <bcf:outputpl0 value="#{itemodd.o_04.podatekpolska}" />
                 </p:column>
-                <p:column headerText="05" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_05.podatekzagranica}" rendered="#{itemodd.o_05 ne null and itemodd.o_05.liczbadni gt 0}"/>
+                <p:column headerText="05">
+                    <bcf:outputpl0 value="#{itemodd.o_05.podatekpolska}" />
                 </p:column>
-                <p:column headerText="06" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_06.podatekzagranica}" rendered="#{itemodd.o_06 ne null and itemodd.o_06.liczbadni gt 0}"/>
+                <p:column headerText="06">
+                    <bcf:outputpl0 value="#{itemodd.o_06.podatekpolska}" />
                 </p:column>
-                <p:column headerText="07" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_07.podatekzagranica}" rendered="#{itemodd.o_07 ne null and itemodd.o_07.liczbadni gt 0}"/>
+                <p:column headerText="07">
+                    <bcf:outputpl0 value="#{itemodd.o_07.podatekpolska}" />
                 </p:column>
-                <p:column headerText="08" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_08.podatekzagranica}" rendered="#{itemodd.o_08 ne null and itemodd.o_08.liczbadni gt 0}"/>
+                <p:column headerText="08" >
+                    <bcf:outputpl0 value="#{itemodd.o_08.podatekpolska}" />
                 </p:column>
-                <p:column headerText="09" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_09.podatekzagranica}" rendered="#{itemodd.o_09 ne null and itemodd.o_09.liczbadni gt 0}"/>
+                <p:column headerText="09">
+                    <bcf:outputpl0 value="#{itemodd.o_09.podatekpolska}" />
                 </p:column>
-                <p:column headerText="10" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_10.podatekzagranica}" rendered="#{itemodd.o_10 ne null and itemodd.o_10.liczbadni gt 0}"/>
+                <p:column headerText="10">
+                    <bcf:outputpl0 value="#{itemodd.o_10.podatekpolska}" />
                 </p:column>
-                <p:column headerText="11" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_11.podatekzagranica}" rendered="#{itemodd.o_11 ne null and itemodd.o_11.liczbadni gt 0}"/>
+                <p:column headerText="11">
+                    <bcf:outputpl0 value="#{itemodd.o_11.podatekpolska}" />
                 </p:column>
-                <p:column headerText="12" style="text-align: center;">
-                    <h:outputText value="#{itemodd.o_12.podatekzagranica}" rendered="#{itemodd.o_12 ne null and itemodd.o_12.liczbadni gt 0}"/>
+                <p:column headerText="12">
+                    <bcf:outputpl0 value="#{itemodd.o_12.podatekpolska}" />
                 </p:column>
-                <p:column headerText="suma" style="margin-left: 10px;">
+                <p:column headerText="suma" style="margin-left: 10px; text-align: center;">
                     <h:outputText value="#{itemodd.sumadni}" style="color: #{itemodd.sumadni gt 182?'red':'initial'}"/>
                 </p:column>
                 <p:column headerText="przekr." width="50">
@@ -230,16 +230,16 @@
                     <h:outputText value="#{itemoddd.rok}"/>
                 </p:column>
                 <p:column headerText="przychód polski" width="70">
-                    <bcf:outputpl value="#{itemoddd.przychodpolski}"/>
+                    <bcf:outputpl0 value="#{itemoddd.przychodpolski}"/>
                 </p:column>
                  <p:column headerText="podatek polska" width="70">
-                     <bcf:outputpl value="#{itemoddd.podatekpolski}" />
+                     <bcf:outputpl0 value="#{itemoddd.podatekpolski}" />
                 </p:column>
                  <p:column headerText="przychód zagr" width="70">
-                     <bcf:outputpl value="#{itemoddd.przychodzagraniczny}" />
+                     <bcf:outputpl0 value="#{itemoddd.przychodzagraniczny}" />
                 </p:column>
                   <p:column headerText="podatek zagranica" width="70">
-                      <bcf:outputpl value="#{itemoddd.podatekzagraniczny}" />
+                      <bcf:outputpl0 value="#{itemoddd.podatekzagraniczny}" />
                 </p:column>
             </p:dataTable>
         </h:form>
